# minion_gui

./: .clangd  .gitignore  README.md  backend.cpp  backend.h  callback.h  dispatcher.cpp  dispatcher.h  editform.cpp  editform.h  fltk-build.go  functions.cpp  functions.h  go.mod  iofile.cpp  layout.cpp  layout.h  minion.cpp  minion.h  minion_gui.cpp  minion_gui.go  minion_gui.h  rowtable.cpp  rowtable.h  textline.cpp  textline.h  widget.cpp  widget.h  widget_methods.cpp  widget_methods.h  widgetdata.cpp  widgetdata.h  widgets.cpp  widgets.h
cpp/: CMakeLists.txt  backend.h  build.sh  callback.h  dispatcher.cpp  dispatcher.h  editform.cpp  layout.cpp  layout.h  main.cpp  minion.cpp  minion.h  minion_gui.cpp  rowtable.cpp  support_functions.cpp  support_functions.h  textline.cpp  widget.cpp  widget.h  widgets.cpp  widgets.h
cpp/lib/: CMakeLists.txt  callback.h  dialogs.cpp  dialogs.h  editform.cpp  editform_0.cpp  functions.cpp  functions.h  iofile.h  layout.cpp  layout.h  minion.cpp  minion.h  minion_gui.cpp  rowtable.cpp  support_functions.cpp  textline.cpp  widget.cpp  widget.h  widgets.cpp  widgets.h
cpp/minion_gui/: CMakeLists.txt  callback.h  functions.cpp  layout.h  minion_gui.cpp  widget.h  widgets.h
cpp/test/: CMakeLists.txt  main.cpp
cpp/test1/: CMakeLists.txt  main.cpp
doc/: basics.md  minion.md
examples/: buttons.minion  buttons1.minion  complex.minion  complex1.minion  complex_0.minion  complex_x.minion  demo.minion  demo_0.minion  fedap.minion  grid.minion  grid1.minion  grid2.minion  main.cpp  studentgroups.minion  various1.minion
examples/buttons/: README  main.go
examples/various_widgets_1/: README  main.go
examples/various_widgets_2/: main.go
examples/various_widgets_3/: README  main.go
fltk/: README-build-fltk  fltkbuild.sh
go/: README  backend.cpp  backend.h  cgo_linux_amd64.go  connector.cpp  connector.h  data  fltk-build-invoke.go  go.mod  minion_gui.go
go/examples/: buttons1.minion
go/examples/buttons/: buttons  go.mod  main.go
go/examples/complex/: go.mod  main.go
go/examples/demo/: go.mod  main.go
go/examples/grid/: go.mod  go.sum  main.go
go/examples/grid2/: main.go
go/examples/various/: go.mod  go.sum  main.go
go/examples/various_widgets_3/: version0
go/go_minion_gui/: go.mod  minion_gui.go
go/go_minion_gui/examples/buttons/: main.go
go/minion/: go.mod  minion.go  minion_test.go
go/minion_gui/: go.mod  minion_gui.go
go/minion_gui/examples/buttons/: main.go
go/mugui/: go.mod  minion_gui.go
go/mugui/examples/buttons/: main.go  minion.go
go/mugui/examples/various_widgets_2/: README
minion/: CMakeLists.txt  iofile.cpp  iofile.h  main.c  minion.c  minion.md
minion/data/: test0.json  test0.minion  test1.json  test2.minion  test3.json  test4.minion  test5e.minion
tmp/: minion.cpp  minion.h
